# example-openmp

./: .cproject  .project  CMakeLists.txt  ex01.cpp  main.cpp  omp_hello.cpp  omp_mm.cpp  omp_orphans.cpp  omp_workshare1.cpp  omp_workshare2.cpp  representations.aird
Debug/: a.txt  b.txt  bb.txt  c.txt  d.txt  ex01.d  makefile  omp_hello.d  omp_mm.d  omp_orphans.d  omp_workshare1.d  omp_workshare2.d  subdir.mk  try_openmp
